# L3April2026

./: AWS_Bedrock_Workshop_Setup_Guide.docx  Agentic_AI_Demo.ipynb  Day2_DeepDive.ipynb  agent_demo.ipynb  agent_demo_ollama.ipynb  agent_example.py  aws_test.py  crewai.ipynb  crewai_gemini_python314.ipynb  main.py  ollama_reranking_demo.ipynb  pyproject.toml  rag_reranking_colab.ipynb  requirements.txt  test.py
01_MCP_Introduction/: client.py  gateway.py  llm_advanced_client.py  math_server.py  server.py  stdio_client.py  stdio_server.py  user_server.py
RAG Practice/: GraphRAG_Fundamentals_Notebook1_Explained.ipynb  Notebook4_RAGAS_Python312.ipynb  Notebook_02_Chunking_Strategies_RAG.ipynb  RAG_Techniques_Reference_1.docx  RAG_Techniques_Training.pptx  basic-rag.py  basic_rag_langchain.ipynb  evaluation_dataset.json  pyproject.toml  rag_hyde.ipynb  rag_multi_query.ipynb  rag_outputs.json  rag_query_rewriting.ipynb  rag_reranking.ipynb  rag_reranking_colab.ipynb  ragas_input.json  ragas_nb1_build_rag_2.ipynb  ragas_nb2_eval_dataset_2.ipynb  ragas_nb3_run_rag_1.ipynb  ragas_results.csv  requirements.txt
chroma_db/: chroma.sqlite3
docs/: company_policy.txt
